--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -589,7 +589,7 @@ services:
     environment:
       - TZ=${TIMEZONE}
     healthcheck:
-      test: ["CMD-SHELL", "curl -fsS --max-time 5 http://127.0.0.1:7171/status | grep -q '\"version\"'"]
+      test: ["CMD-SHELL", "wget -qO- --timeout=5 --tries=1 http://127.0.0.1:7171/api/v1/status | grep -q '\"version\"'"]
       interval: 30s
       timeout: 10s
       retries: 5
