--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -129,32 +129,58 @@ services:
       - traefik.http.routers.bazarr.tls.certresolver=myresolver
       - traefik.http.services.bazarr.loadbalancer.server.port=6767
       - traefik.docker.network=proxy_internal
-  overseerr:
-    image: lscr.io/linuxserver/overseerr:develop
-    container_name: overseerr
+#  overseerr:
+#    image: lscr.io/linuxserver/overseerr:develop
+#    container_name: overseerr
+#    environment:
+#      - PUID=${USER_ID}
+#      - PGID=${GROUP_ID}
+#      - TZ=${TIMEZONE}
+#    volumes:
+#      - ${CONFIG_ROOT}/overseerr:/config
+#    networks:
+#      - default
+#      - proxy_internal
+#    labels:
+#      - traefik.enable=true
+#      - traefik.http.routers.overseerr.rule=Host(`${OVERSEERR_URL}`)
+#      - traefik.http.routers.overseerr.entrypoints=web-secure
+#      - traefik.http.routers.overseerr.tls=true
+#      - traefik.http.routers.overseerr.tls.certresolver=myresolver
+#      - traefik.http.services.overseerr.loadbalancer.server.port=5055
+#    healthcheck:
+#      test: ["CMD-SHELL", "curl -fsS --max-time 5 http://127.0.0.1:5055/ >/dev/null || exit 1"]
+#      interval: 30s
+#      timeout: 5s
+#      retries: 5
+#      start_period: 30s
+#    restart: unless-stopped
+  seerr:
+    image: ghcr.io/seerr-team/seerr:latest
+    init: true
+    container_name: seerr
     environment:
-      - PUID=${USER_ID}
-      - PGID=${GROUP_ID}
+      - LOG_LEVEL=debug
       - TZ=${TIMEZONE}
-    volumes:
-      - ${CONFIG_ROOT}/overseerr:/config
     networks:
       - default
       - proxy_internal
+    volumes:
+      - ${CONFIG_ROOT}/seerr:/app/config
+    healthcheck:
+      test: wget --no-verbose --tries=1 --spider http://localhost:5055/api/v1/status || exit 1
+      start_period: 20s
+      timeout: 3s
+      interval: 15s
+      retries: 3
+    restart: unless-stopped
     labels:
       - traefik.enable=true
-      - traefik.http.routers.overseerr.rule=Host(`${OVERSEERR_URL}`)
-      - traefik.http.routers.overseerr.entrypoints=web-secure
-      - traefik.http.routers.overseerr.tls=true
-      - traefik.http.routers.overseerr.tls.certresolver=myresolver
-      - traefik.http.services.overseerr.loadbalancer.server.port=5055
-    healthcheck:
-      test: ["CMD-SHELL", "curl -fsS --max-time 5 http://127.0.0.1:5055/ >/dev/null || exit 1"]
-      interval: 30s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
-    restart: unless-stopped
+      - traefik.http.routers.seerr.rule=Host(`${SEERR_URL}`)
+      - traefik.http.routers.seerr.entrypoints=web-secure
+      - traefik.http.routers.seerr.tls=true
+      - traefik.http.routers.seerr.tls.certresolver=myresolver
+      - traefik.http.services.seerr.loadbalancer.server.port=5055
   prowlarr:
     image: lscr.io/linuxserver/prowlarr:latest
     container_name: prowlarr
