--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -177,6 +177,7 @@ services:
     labels:
       - traefik.enable=true
       - traefik.http.routers.seerr.rule=Host(`${SEERR_URL}`)
+      - traefik.http.routers.seerr.rule=Host(`${OVERSEERR_URL}`)
       - traefik.http.routers.seerr.entrypoints=web-secure
       - traefik.http.routers.seerr.tls=true
       - traefik.http.routers.seerr.tls.certresolver=myresolver
