moved homarr to authentik login

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -443,6 +443,17 @@ services:
     environment:
       - BASE_URL=${HOSTNAME}
       - SECRET_ENCRYPTION_KEY=${HOMARR_ENCRYPTION}
+      - NEXTAUTH_URL=${HOMARR_AUTHENTIK_URL}
+      - AUTH_PROVIDERS=oidc
+      - AUTH_OIDC_CLIENT_ID=${HOMARR_AUTHENTIK_CLIENT_ID}
+      - AUTH_OIDC_CLIENT_SECRET=${HOMARR_AUTHENTIK_SECRET}
+      - AUTH_OIDC_CLIENT_NAME=${HOMARR_AUTHENTIK_NAME}
+      - AUTH_OIDC_ISSUER=${HOMARR_OIDC_ISSUER}
+      - AUTH_OIDC_URI=${HOMARR_OIDC_URI}
+      - AUTH_OIDC_SCOPE_OVERWRITE=openid email profile groups
+      - AUTH_OIDC_GROUPS_ATTRIBUTE=groups
+      - AUTH_OIDC_AUTO_LOGIN=true
+      - AUTH_OIDC_FORCE_USERINFO=true
     healthcheck:
       test:
         [
