--- a/env.example
+++ b/env.example
@@ -34,6 +34,13 @@ GSP_GTN_API_KEY=     #https://github.com/t-anc/GSP-Qbittorent-Gluetun-sync-port-
 PLEX_CLAIM=
 MAM_ID=
 HOMARR_ENCRYPTION=
+#these are for setting up authentik as the login for Homarr
+AUTHENTIK_URL=
+HOMARR_AUTHENTIK_NAME=
+HOMARR_AUTHENTIK_CLIENT_ID=
+HOMARR_AUTHENTIK_SECRET=
+HOMARR_OIDC_ISSUER=
+HOMARR_OIDC_URI=
 #these apps have issues as paths (domain.com/plex, etc.) so they are set directly
 OVERSEERR_URL=
 PROFILARR_URL=
