fixed HOMARR_AUTHENTIK_URL env variable name

--- a/env.example
+++ b/env.example
@@ -35,7 +35,7 @@ PLEX_CLAIM=
 MAM_ID=
 HOMARR_ENCRYPTION=
 #these are for setting up authentik as the login for Homarr
-AUTHENTIK_URL=
+HOMARR_AUTHENTIK_URL=
 HOMARR_AUTHENTIK_NAME=
 HOMARR_AUTHENTIK_CLIENT_ID=
 HOMARR_AUTHENTIK_SECRET=
