--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,4 @@
 services:
-  traefik:
-    image: traefik:latest
-    container_name: traefik
-    restart: unless-stopped
-    environment:
-      - CLOUDFLARE_EMAIL=${CLOUDFLARE_EMAIL}
-      - CLOUDFLARE_DNS_API_TOKEN=${CLOUDFLARE_DNS_API_TOKEN}
-      - CLOUDFLARE_ZONE_API_TOKEN=${CLOUDFLARE_ZONE_API_TOKEN}
-      - LETS_ENCRYPT_EMAIL=${LETS_ENCRYPT_EMAIL}
-    command:
-      - --ping=true
-      - --providers.docker=true
-      - --providers.docker.exposedbydefault=false
-      - --entrypoints.web.address=:80
-      - --entrypoints.web-secure.address=:443
-      - --entrypoints.web.http.redirections.entryPoint.to=web-secure
-      - --entrypoints.web.http.redirections.entryPoint.scheme=https
-      - --entrypoints.web.http.redirections.entrypoint.permanent=true
-      - --experimental.plugins.rewrite-body.modulename=github.com/packruler/rewrite-body
-      - --experimental.plugins.rewrite-body.version=v1.2.0
-      - --experimental.plugins.rewriteHeaders.modulename=github.com/XciD/traefik-plugin-rewrite-headers
-      - --experimental.plugins.rewriteHeaders.version=v0.0.3
-      - --certificatesresolvers.myresolver.acme.dnschallenge=${DNS_CHALLENGE:-true}
-      - --certificatesresolvers.myresolver.acme.dnschallenge.provider=${DNS_CHALLENGE_PROVIDER:-cloudflare}
-      - --certificatesresolvers.myresolver.acme.dnschallenge.resolvers=1.1.1.1:53,8.8.8.8:53
-      - --certificatesresolvers.myresolver.acme.caserver=${LETS_ENCRYPT_CA_SERVER:-https://acme-v02.api.letsencrypt.org/directory}
-      - --certificatesresolvers.myresolver.acme.email=${LETS_ENCRYPT_EMAIL}
-      - --certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json
-#      - --log.level=DEBUG
-#      - --log.format=common
-    ports:
-      - "80:80"
-      - "443:443"
-    networks:
-      - default
-      - proxy_internal
-    volumes:
-      - ${CONFIG_ROOT:-.}/letsencrypt:/letsencrypt
-      - "/var/run/docker.sock:/var/run/docker.sock:ro"
-    healthcheck:
-      test: [ "CMD", "traefik", "healthcheck", "--ping" ]
-      interval: 30s
-      retries: 10
   sonarr:
     image: lscr.io/linuxserver/sonarr
     container_name: sonarr
@@ -63,14 +20,6 @@ services:
     depends_on:
       vpn:
         condition: service_healthy
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.sonarr.rule=(Host(`${HOSTNAME}`) && PathPrefix(`/sonarr`))
-      - traefik.http.routers.sonarr.entrypoints=web-secure
-      - traefik.http.routers.sonarr.tls=true
-      - traefik.http.routers.sonarr.tls.certresolver=myresolver
-      - traefik.http.services.sonarr.loadbalancer.server.port=8989
-      - traefik.docker.network=proxy_internal
   radarr:
     image: lscr.io/linuxserver/radarr
     container_name: radarr
@@ -92,14 +41,6 @@ services:
     depends_on:
       vpn:
         condition: service_healthy
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.radarr.rule=(Host(`${HOSTNAME}`) && PathPrefix(`/radarr`))
-      - traefik.http.routers.radarr.entrypoints=web-secure
-      - traefik.http.routers.radarr.tls=true
-      - traefik.http.routers.radarr.tls.certresolver=myresolver
-      - traefik.http.services.radarr.loadbalancer.server.port=7878
-      - traefik.docker.network=proxy_internal
   bazarr:
     image: lscr.io/linuxserver/bazarr:latest
     container_name: bazarr
@@ -121,40 +62,6 @@ services:
     depends_on:
       vpn:
         condition: service_healthy
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.bazarr.rule=(Host(`${HOSTNAME}`) && PathPrefix(`/bazarr`))
-      - traefik.http.routers.bazarr.entrypoints=web-secure
-      - traefik.http.routers.bazarr.tls=true
-      - traefik.http.routers.bazarr.tls.certresolver=myresolver
-      - traefik.http.services.bazarr.loadbalancer.server.port=6767
-      - traefik.docker.network=proxy_internal
-#  overseerr:
-#    image: lscr.io/linuxserver/overseerr:develop
-#    container_name: overseerr
-#    environment:
-#      - PUID=${USER_ID}
-#      - PGID=${GROUP_ID}
-#      - TZ=${TIMEZONE}
-#    volumes:
-#      - ${CONFIG_ROOT}/overseerr:/config
-#    networks:
-#      - default
-#      - proxy_internal
-#    labels:
-#      - traefik.enable=true
-#      - traefik.http.routers.overseerr.rule=Host(`${OVERSEERR_URL}`)
-#      - traefik.http.routers.overseerr.entrypoints=web-secure
-#      - traefik.http.routers.overseerr.tls=true
-#      - traefik.http.routers.overseerr.tls.certresolver=myresolver
-#      - traefik.http.services.overseerr.loadbalancer.server.port=5055
-#    healthcheck:
-#      test: ["CMD-SHELL", "curl -fsS --max-time 5 http://127.0.0.1:5055/ >/dev/null || exit 1"]
-#      interval: 30s
-#      timeout: 5s
-#      retries: 5
-#      start_period: 30s
-#    restart: unless-stopped
   seerr:
     image: ghcr.io/seerr-team/seerr:latest
     init: true
@@ -174,13 +81,6 @@ services:
       interval: 15s
       retries: 3
     restart: unless-stopped
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.seerr.rule=Host(`${SEERR_URL}`) || Host(`${OVERSEERR_URL}`)
-      - traefik.http.routers.seerr.entrypoints=web-secure
-      - traefik.http.routers.seerr.tls=true
-      - traefik.http.routers.seerr.tls.certresolver=myresolver
-      - traefik.http.services.seerr.loadbalancer.server.port=5055
   prowlarr:
     image: lscr.io/linuxserver/prowlarr:latest
     container_name: prowlarr
@@ -201,14 +101,6 @@ services:
     depends_on:
       vpn:
         condition: service_healthy
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.prowlarr.rule=(Host(`${HOSTNAME}`) && PathPrefix(`/prowlarr`))
-      - traefik.http.routers.prowlarr.entrypoints=web-secure
-      - traefik.http.routers.prowlarr.tls=true
-      - traefik.http.routers.prowlarr.tls.certresolver=myresolver
-      - traefik.http.services.prowlarr.loadbalancer.server.port=9696
-      - traefik.docker.network=proxy_internal
   profilarr:
     image: santiagosayshey/profilarr:latest
     container_name: profilarr
@@ -233,14 +125,6 @@ services:
       timeout: 5s
       retries: 3
       start_period: 40s
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.profilarr.rule=Host(`${PROFILARR_URL}`)
-      - traefik.http.routers.profilarr.entrypoints=web-secure
-      - traefik.http.routers.profilarr.tls=true
-      - traefik.http.routers.profilarr.tls.certresolver=myresolver
-      - traefik.http.services.profilarr.loadbalancer.server.port=6868
-      - traefik.docker.network=proxy_internal
   flaresolverr:
     image: ghcr.io/flaresolverr/flaresolverr:latest
     container_name: flaresolverr
@@ -260,14 +144,6 @@ services:
     depends_on:
       vpn:
         condition: service_healthy
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.flaresolverr.rule=(Host(`${HOSTNAME}`) && PathPrefix(`/flaresolverr`))
-      - traefik.http.routers.flaresolverr.entrypoints=web-secure
-      - traefik.http.routers.flaresolverr.tls=true
-      - traefik.http.routers.flaresolverr.tls.certresolver=myresolver
-      - traefik.http.services.flaresolverr.loadbalancer.server.port=8191
-      - traefik.docker.network=proxy_internal
     profiles:
       - flaresolverr
   qbittorrent:
@@ -294,19 +170,6 @@ services:
     depends_on:
       vpn:
         condition: service_healthy
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.qbittorrent.rule=(Host(`${HOSTNAME}`) && PathPrefix(`/qbittorrent`))
-      - traefik.http.routers.qbittorrent.entrypoints=web-secure
-      - traefik.http.routers.qbittorrent.tls=true
-      - traefik.http.routers.qbittorrent.tls.certresolver=myresolver
-      - traefik.http.services.qbittorrent.loadbalancer.server.port=8081
-      - traefik.http.routers.qbittorrent.middlewares=qbittorrent-strip-slash,qbittorrent-stripprefix
-      - traefik.http.middlewares.qbittorrent-stripprefix.stripPrefix.prefixes=/qbittorrent
-      - traefik.http.middlewares.qbittorrent-strip-slash.redirectregex.regex=(^.*\/qbittorrent$$)
-      - traefik.http.middlewares.qbittorrent-strip-slash.redirectregex.replacement=$$1/
-      - traefik.http.middlewares.qbittorrent-strip-slash.redirectregex.permanent=false
-      - traefik.docker.network=proxy_internal
   vpn:
     image: qmcgaw/gluetun
     container_name: vpn
@@ -382,14 +245,6 @@ services:
     depends_on:
       vpn:
         condition: service_healthy
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.sabnzbd.rule=(Host(`${HOSTNAME}`) && PathPrefix(`/sabnzbd`))
-      - traefik.http.routers.sabnzbd.entrypoints=web-secure
-      - traefik.http.routers.sabnzbd.tls=true
-      - traefik.http.routers.sabnzbd.tls.certresolver=myresolver
-      - traefik.http.services.sabnzbd.loadbalancer.server.port=8080
-      - traefik.docker.network=proxy_internal
     profiles:
       - sabnzbd
   plex:
@@ -426,13 +281,6 @@ services:
       timeout: 5s
       retries: 5
       start_period: 60s
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.plex.rule=Host(`${PLEX_URL}`)
-      - traefik.http.routers.plex.entrypoints=web-secure
-      - traefik.http.routers.plex.tls=true
-      - traefik.http.routers.plex.tls.certresolver=myresolver
-      - traefik.http.services.plex.loadbalancer.server.port=32400
   homarr:
     container_name: homarr
     image: ghcr.io/homarr-labs/homarr:latest
@@ -440,6 +288,9 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro # Optional, only if you want docker integration
       - ${DATA_ROOT}/homarr:/appdata
+    networks:
+      - default
+      - proxy_internal
     environment:
       - BASE_URL=${HOSTNAME}
       - SECRET_ENCRYPTION_KEY=${HOMARR_ENCRYPTION}
@@ -466,16 +317,6 @@ services:
       timeout: 5s
       retries: 5
       start_period: 30s
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.homarr.rule=Host(`${HOMARR_URL}`)
-      - traefik.http.routers.homarr.tls=true
-      - traefik.http.routers.homarr.tls.certresolver=myresolver
-      - traefik.http.routers.homarr.entrypoints=web-secure
-      - traefik.http.routers.homarr.middlewares=homarr-headers
-      - traefik.http.middlewares.homarr-headers.headers.customrequestheaders.Connection=Upgrade
-      - traefik.http.middlewares.homarr-headers.headers.customrequestheaders.Upgrade=websocket
-      - traefik.http.services.homarr.loadbalancer.server.port=7575
   autoheal:
     image: willfarrell/autoheal:latest
     container_name: autoheal
@@ -506,13 +347,6 @@ services:
       timeout: 5s
       retries: 5
       start_period: 30s
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.dash.rule=Host(`${DASH_URL}`)
-      - traefik.http.routers.dash.entrypoints=web-secure
-      - traefik.http.routers.dash.tls=true
-      - traefik.http.routers.dash.tls.certresolver=myresolver
-      - traefik.http.services.dash.loadbalancer.server.port=3001
   audiobookshelf:
     image: ghcr.io/advplyr/audiobookshelf:latest
     container_name: audiobookshelf
@@ -583,15 +417,6 @@ services:
       timeout: 10s
       retries: 10
       start_period: 40s
-    labels:
-      - traefik.enable=true
-      - traefik.docker.network=proxy_internal
-      - traefik.http.services.dispatcharr-svc.loadbalancer.server.port=9191
-      - traefik.http.routers.dispatcharr.rule=Host(`${DISPATCHARR_URL}`)
-      - traefik.http.routers.dispatcharr.entrypoints=web-secure
-      - traefik.http.routers.dispatcharr.tls=true
-      - traefik.http.routers.dispatcharr.tls.certresolver=myresolver
-      - traefik.http.routers.dispatcharr.service=dispatcharr-svc
   gluetun_status:
     image: python:3.12-alpine
     container_name: gluetun_status
@@ -616,16 +441,17 @@ services:
         condition: service_healthy
     networks:
       - proxy_internal
-    labels:
-      - traefik.enable=true
-      - traefik.docker.network=proxy_internal
-      - traefik.http.routers.gluetun-status.rule=(Host(`${HOSTNAME}`) && PathPrefix(`/gluetun`))
-      - traefik.http.routers.gluetun-status.entrypoints=web-secure
-      - traefik.http.routers.gluetun-status.tls=true
-      - traefik.http.routers.gluetun-status.tls.certresolver=myresolver
-      - traefik.http.middlewares.gluetun-status-strip.stripprefix.prefixes=/gluetun
-      - traefik.http.routers.gluetun-status.middlewares=gluetun-status-strip
-      - traefik.http.services.gluetun-status.loadbalancer.server.port=5000
+  cloudflared:
+    image: cloudflare/cloudflared:latest
+    container_name: cloudflared_plex
+    restart: unless-stopped
+    command: tunnel run --token ${CF_TUNNEL_TOKEN}
+    networks:
+      - default
+      - proxy_internal
+    dns:
+      - 1.1.1.1
+      - 1.0.0.1
 
 networks:
   default:
